# escape-city

./: README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/public/models/: player.glb
client/src/: App.tsx
client/src/components/Views/: IconButton.tsx  Modal.tsx  NumberCard.tsx  RunAway.tsx  RunAwaysItem.tsx  index.ts  style.css
client/src/config/: config.devnet.ts
client/src/hooks/transactions/: index.ts  useCreateEscapeAttemptFeedRunaway.ts  useGetRunAwayById.ts  useGetTokensOfOwner.tsx
client/src/localConstants/routes/: routeNames.enums.ts
client/src/pages/: index.ts
client/src/routes/: routes.ts
client/src/utils/: EscapeCityTypes.ts
escape-city/: Cargo.toml  deploy-devnet.interaction.json
escape-city/meta/: Cargo.toml
escape-city/meta/src/: main.rs
escape-city/output/: escape-city.abi.json  escape-city.imports.json  escape-city.mxsc.json  escape-city.wasm
escape-city/scenarios/: escape_city.scen.json
escape-city/src/: auction.rs  auction_house.rs  escape.rs  escape_attempts.rs  escape_city.rs  ownership.rs  runaway_multiply.rs  runaways.rs  runaways_factory.rs  storage.rs
escape-city/tests/: escape_city_scenario_go_test.rs  escape_city_scenario_rs_test.rs
escape-city/wasm/: Cargo.toml
escape-city/wasm/src/: lib.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/contracts/: escape-city.abi.json
frontend/src/pages/: index.ts
frontend/src/routes/: routes.ts
frontend/src/styles/: globals.css
frontend/src/utils/: smartContract.ts
wallet/: wallet-owner.pem
(+26 files in other folders)
