[package]
name = "escape-city"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/escape_city.rs"

[dependencies.multiversx-sc]
version = "0.50.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.1"

[workspace]
members = [
    ".",
    "meta",
]
